expect api for nuget
intro nuget ui